cul_1 - update vanilla dragon culture

--- a/animals_update/localisation/00_culture_and_bloodline.csv
+++ b/animals_update/localisation/00_culture_and_bloodline.csv
@@ -42,3 +42,6 @@ black_cat;Black cat;Chat noir;;;;;;;;;;;;x
 #dog update
 dog_culture;hills' dogs;Chien des montagnes;;;;;;;;;;;;x
 steppe_dog;steppe dog;Chien des steppes;;;;;;;;;;;;x
+
+#dragon update
+dragon_culture;dragon egg;œuf de dragon;;;;;;;;;;;;x
