cul_1 - added black dragon culture

--- a/animals_update/localisation/00_culture_and_bloodline.csv
+++ b/animals_update/localisation/00_culture_and_bloodline.csv
@@ -45,3 +45,4 @@ steppe_dog;steppe dog;Chien des steppes;;;;;;;;;;;;x
 
 #dragon update
 dragon_culture;dragon egg;œuf de dragon;;;;;;;;;;;;x
+black_dragon;black dragon;dragon noir;;;;;;;;;;;;x
