cul_1 - added other dragon culture

--- a/animals_update/localisation/00_culture_and_bloodline.csv
+++ b/animals_update/localisation/00_culture_and_bloodline.csv
@@ -46,3 +46,7 @@ steppe_dog;steppe dog;Chien des steppes;;;;;;;;;;;;x
 #dragon update
 dragon_culture;dragon egg;œuf de dragon;;;;;;;;;;;;x
 black_dragon;black dragon;dragon noir;;;;;;;;;;;;x
+white_dragon;white dragon;dragon blanc;;;;;;;;;;;;x
+blue_dragon;blue dragon;dragon bleu;;;;;;;;;;;;x
+red_dragon;red dragon;dragon rouge;;;;;;;;;;;;x
+yellow_dragon;yellow dragon;dragon jaune;;;;;;;;;;;;x
