--- a/animals_update/localisation/customizable_localisation/animal_decision_custom_loc.txt
+++ b/animals_update/localisation/customizable_localisation/animal_decision_custom_loc.txt
@@ -84,6 +84,12 @@ defined_text = {
         }
         localisation_key = Horse_religion
     }
+    text = {
+        trigger = {
+            FROM = { religion = Dragon_religion }
+        }
+        localisation_key = Dragon_religion
+    }
 }
 
 defined_text = {
@@ -189,6 +195,10 @@ defined_text = {
     text = {
         trigger = { culture_group = horse_group }
         localisation_key = hunter
+    }
+    text = {
+        trigger = { culture_group = dragon_group }
+        localisation_key = impaler
     }
 }
 
