bat_1 - second tribal building

--- a/animals_update/localisation/buildings.csv
+++ b/animals_update/localisation/buildings.csv
@@ -446,3 +446,7 @@ tb_drg_slave_worker_1;Slave buisiness guild;Guilde d'exploitation des esclaves;;
 tb_drg_slave_worker_2;Slave buisiness guild;Guilde d'exploitation des esclaves;;;;;;;;;;;;x
 tb_drg_slave_worker_3;Slave buisiness guild;Guilde d'exploitation des esclaves;;;;;;;;;;;;x
 tb_drg_slave_worker_4;Slave buisiness guild;Guilde d'exploitation des esclaves;;;;;;;;;;;;x
+tb_drg_slave_fighter_1;Slave warrior guild;Guilde d'esclaves de guerre;;;;;;;;;;;;x
+tb_drg_slave_fighter_2;Slave warrior guild;Guilde d'esclaves de guerre;;;;;;;;;;;;x
+tb_drg_slave_fighter_3;Slave warrior guild;Guilde d'esclaves de guerre;;;;;;;;;;;;x
+tb_drg_slave_fighter_4;Slave warrior guild;Guilde d'esclaves de guerre;;;;;;;;;;;;x
