bat_1 - capital tribal buildings

--- a/animals_update/localisation/buildings.csv
+++ b/animals_update/localisation/buildings.csv
@@ -450,3 +450,4 @@ tb_drg_slave_fighter_1;Slave warrior guild;Guilde d'esclaves de guerre;;;;;;;;;;
 tb_drg_slave_fighter_2;Slave warrior guild;Guilde d'esclaves de guerre;;;;;;;;;;;;x
 tb_drg_slave_fighter_3;Slave warrior guild;Guilde d'esclaves de guerre;;;;;;;;;;;;x
 tb_drg_slave_fighter_4;Slave warrior guild;Guilde d'esclaves de guerre;;;;;;;;;;;;x
+tb_drg_fighter;dragon center;Centre des dragons;;;;;;;;;;;;x
